@startuml
  entity socio{
    *cod_socio: number «generated»
    --
    *dni:       number
    *direccion: text
    *telefono:  number
    *nombre:    text
    *apellido:  text
    fecha_baja: text
  }

  entity libro{
    *id_ejemplar:  number «generated»
    --
    *anio:              date
    *titulo:            text
    *editorial:         text
    *estado_fisico:     text
    *disponibilidad:    text
    *timestamp_registro:date
    *autores:           text
    *ISBN:              number
    fecha_baja: text
  }

  entity item_libro_en_prestamo {
    *id_item:    number  «generated»
    --
    id_libro:    number  «FK»
    id_prestamo: number  «FK»
    *fecha_prestamo:      date «generated»
    *fecha_limite_devolucion: date «generated»
    *fecha_devolucion:        date
    fecha_baja: text
  }

  entity prestamo{
    *id_prestamo:     number  «generated»
    --
    *cod_socio:       number  «FK»
    *estado: number          «FK»
    fecha_baja: text
  }
  
  entity estado_prestamo{
    *id_estado      number  «generated»
    *estado   text
  }

libro     ||--o{    item_libro_en_prestamo
prestamo  ||--|{    item_libro_en_prestamo
socio     ||--o{    prestamo
estado_prestamo ||--o{ prestamo

@enduml
